# limix-plot

./: .appveyor.yml  .gitignore  .travis.yml  README.md  conftest.py  example.py  requirements.txt  setup.cfg  time.txt
doc/: Makefile  conf.py  index.rst  make.bat
limix_plot/: __init__.py  _consensus.py  _dataset.py  _image.py  _kinship.py  _manhattan.py  _misc.py  _normal.py  _pca.py  _plt.py  _power.py  _qqplot.py  _show.py  _testit.py  conftest.py  consensus.py  dataset.py  image.py  kinship.py  manhattan.py  misc.py  normal.py  pca.py  power.py  qqplot.py  testit.py
