[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Plotting library for genetics.
download_url = https://github.com/limix/limix-plot
keywords = visualization, genetics
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = limix-plot
url = https://github.com/limix/limix-plot
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=3.0
    setuptools>=39.0.1
install_requires =
    matplotlib>=2.2.2
    numpy>=1.14.2
    pandas>=0.22.0
    Pillow>=5.1.0
    pytest-pep8>=1.0.6
    pytest>=3.5.0
    scikit-learn>=0.19.1
    scipy>=1.0.1
    tqdm>=4.19.9

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-rst
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
doctest_optionflags = ELLIPSIS
norecursedirs = .eggs .git *.egg-info build .ropeproject doc/_build
pep8ignore = E402

[flake8]
ignore = E501 E741 E203

[doc8]
max-line-length = 88