[metadata]
author = Danilo Horta
author_email = horta@ebi.ac.uk
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Plotting library for genetics.
download_url = https://github.com/limix/limix-plot
keywords = visualization, genetics
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = horta@ebi.ac.uk
name = limix-plot
url = https://github.com/limix/limix-plot
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
    pytest-runner>=4.4
    setuptools>=41.0.0
install_requires =
    adjustText>=0.7.3
    matplotlib>=3.0.3
    numpy>=1.16.2
    pandas>=0.24.2
    Pillow>=6.0.0
    pytest>=4.4.1
    scikit-learn>=0.20.3
    scipy>=1.2.1
    xarray>=0.12.1

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
    --ignore="doc/conf.py"
doctest_optionflags = ELLIPSIS
norecursedirs = .eggs .git *.egg-info build .ropeproject doc/_build
pep8ignore = E402

[tool:isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
line_length=88

[flake8]
ignore = E501 E741 E203

[pylint]
disable = R0915

[doc8]
max-line-length = 88

[rstcheck]
ignore_substitutions = today, version
ignore_directives = plot, autofunction, command-output, autmodule, automodule, autoclass, autoattribute, automethod, doctest
ignore_messages = Error in "math" directive
